[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-templates"
version = "0.2.0"
description = "Quick-start templates for MCP servers"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AI SaaS Lab", email = "lab@example.com"}
]
keywords = ["mcp", "model context protocol", "templates", "ai"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mcp-templates = "generator:main"

[tool.setuptools]
py-modules = ["generator"]
